# rust-patterns

./: README.md
hello-gtk/src/: main.rs
observer/: Cargo.toml  build.rs
observer/src/: fibonacci.rs  lib.rs  main.rs
observer/src/resources/: resources.cmb  resources.gresource.xml  window.ui
observer/src/window/: imp.rs  mod.rs
